# ImageSequencer

./: README.md  meson.build
src/: ffmpegwrapper.vala  imagesequencer.vala
